<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/IP_Address" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblIpAddress"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="78dp"
        android:hapticFeedbackEnabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/txtPort"
        android:layout_alignEnd="@+id/txtPort"
        android:layout_alignParentStart="false"
        android:onClick="onButtonSaveClick" />

    <TextView
        android:text="@string/Port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblPort"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lblIpAddress"
        android:layout_alignParentStart="true"
        android:hapticFeedbackEnabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtIpAddress"
        android:inputType="textUri"
        android:layout_above="@+id/lblPort"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnSTartStream" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtPort"
        android:layout_below="@+id/txtIpAddress"
        android:layout_alignParentEnd="true"
        android:inputType="number"
        android:layout_alignStart="@+id/txtIpAddress" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start_Stream"
        android:id="@+id/btnSTartStream"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onStartStreamClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopStream"
        android:id="@+id/btnStopStream"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/txtPort"
        android:nestedScrollingEnabled="false" />

</RelativeLayout>
